@@ -237,7 +237,7 @@ merge_command(const char *command, const char *params)
 {
   /* allocate extra space for 2x'"', ' ' and '\0' */
   char *cmd_line = (char *)Safe_alloc(strlen(command) + strlen(params) + 4);
-  sprintf(cmd_line, "\"%s\" %s", command, params);
+  sprintf(cmd_line, "%s %s", command, params);
 
   return cmd_line;
 }
@@ -251,10 +251,6 @@ static int
 has_path(const char *path)
 {
   if (strrchr(path, DIR_SEPARATOR_CHAR) == NULL)
-#ifdef _WIN32
-    /* try *nix dir separator on WIN32 */
-    if (strrchr(path, UNIX_DIR_SEPARATOR_CHAR) == NULL)
-#endif
       return 0;
 
   return 1;
